--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -34,7 +34,7 @@
     "googleapis": "^144.0.0",
     "lucide-react": "^0.294.0",
     "mapbox-gl": "^3.16.0",
-    "next": "^16.0.1",
+    "next": "16.0.10",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.7",
     "react": "^18",
@@ -56,7 +56,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.10",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "postcss": "^8",
